brat/test/golden/imports/non-existent2.brat.golden
Error in non-existent2 on line 1:
import lib hiding (y, a)
                      ^

  Symbol `a` not found in `lib`

