brat/test/golden/imports/non-existent2.brat
import lib hiding (y, a)

main :: Nat
main = x